# zephyr_control_systems_demo

./: CMakeLists.txt  README.md  prj.conf
boards/: nucleo_g474re.overlay
src/: adrc_control_law.c  adrc_control_law.h  control_law.h  lqr_siso_control_law.c  lqr_siso_control_law.h  main.c  motor_control_pipeline.c  motor_control_pipeline.h  motor_hardware.h  motor_hardware_mf4005.c  motor_hardware_mf4005.h  pid_control_law.c  pid_control_law.h
